manifest/objects/Broker_Price__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Broker Prices</relationshipLabel>
        <relationshipName>Broker_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>At_Risk_PPPM_Fee__c</fullName>
        <label>At Risk Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consult_Type__c</fullName>
        <label>Consult Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consult_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copado_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Copado External Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Type_Formula__c</fullName>
        <description>Used in the PEPM Pricing for Livongo Price Rule</description>
        <formula>IF(ISPICKVAL(Fee_Type__c,&quot;&quot;), &apos;NULL&apos;,TEXT(Fee_Type__c))</formula>
        <label>Fee Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fee_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GrandParent_Product_Code__c</fullName>
        <formula>IF(ISBLANK(GrandParent_Product__c), &apos;NULL&apos;,GrandParent_Product__r.ProductCode)</formula>
        <label>GrandParent Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrandParent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GrandParent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Broker Prices (GrandParent Product)</relationshipLabel>
        <relationshipName>Broker_Child_Child_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Utilization_Cap__c</fullName>
        <description>This is the utilization % at the point of sale based upon the appropriate pricing sheet and number of lives. This will be the utilization rate for any proposals and/or contracts that are produced in Octiv.</description>
        <inlineHelpText>The Utilization Cap % for consults included products.</inlineHelpText>
        <label>Initial Utilization Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_Custom__c</fullName>
        <formula>Account__c != NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees_End__c</fullName>
        <label>Number of Employees End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees_Start__c</fullName>
        <label>Number of Employees Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Product_Code__c</fullName>
        <description>Parent Product Code Formula</description>
        <formula>IF(ISBLANK(Parent_Product__c), &apos;NULL&apos;,Parent_Product__r.ProductCode)</formula>
        <label>Parent Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User this price if the product entry has a parent</description>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Broker Prices (Parent Product)</relationshipLabel>
        <relationshipName>Broker_Child_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price per Employee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Broker Prices</relationshipLabel>
        <relationshipName>Broker_Prices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Up_Front_Fee__c</fullName>
        <label>Up Front Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Broker Price</label>
    <listViews>
        <fullName>All_Two</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Fee_Type__c</columns>
        <columns>Parent_Product_Code__c</columns>
        <columns>Number_of_Employees_Start__c</columns>
        <columns>Number_of_Employees_End__c</columns>
        <columns>Price__c</columns>
        <columns>Discount__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EMS</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Price__c</columns>
        <columns>Discount__c</columns>
        <columns>Number_of_Employees_Start__c</columns>
        <columns>Number_of_Employees_End__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Expert Medical Opinion 2.0</value>
        </filters>
        <filters>
            <field>Discount__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>EMS</label>
    </listViews>
    <listViews>
        <fullName>General_Medical</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Number_of_Employees_Start__c</columns>
        <columns>Number_of_Employees_End__c</columns>
        <columns>Price__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Parent_Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Code__c</field>
            <operation>equals</operation>
            <value>GM</value>
        </filters>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Product - GM</label>
    </listViews>
    <listViews>
        <fullName>MFN_Pricing</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Number_of_Employees_Start__c</columns>
        <columns>Number_of_Employees_End__c</columns>
        <columns>Price__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Consult_Type__c</field>
            <operation>equals</operation>
            <value>MFN - Standard,MFN - Included</value>
        </filters>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Pricing - MFN</label>
    </listViews>
    <listViews>
        <fullName>Mercer_Pricing</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Number_of_Employees_Start__c</columns>
        <columns>Number_of_Employees_End__c</columns>
        <columns>Price__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Consult_Type__c</field>
            <operation>contains</operation>
            <value>Mercer/WTW</value>
        </filters>
        <label>Pricing - Mercer/WTW</label>
    </listViews>
    <listViews>
        <fullName>Pricing_Standard</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Number_of_Employees_Start__c</columns>
        <columns>Number_of_Employees_End__c</columns>
        <columns>Price__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Consult_Type__c</field>
            <operation>equals</operation>
            <value>Standard,Tier 1 - Standard,MFN - Standard,Mercer WTW - Standard</value>
        </filters>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Pricing - Standard</label>
    </listViews>
    <listViews>
        <fullName>Product_BD_Bundle</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Number_of_Employees_Start__c</columns>
        <columns>Number_of_Employees_End__c</columns>
        <columns>Price__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Code__c</field>
            <operation>equals</operation>
            <value>BD-Bundle</value>
        </filters>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Product - BD Bundle</label>
    </listViews>
    <listViews>
        <fullName>Product_BH</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Number_of_Employees_Start__c</columns>
        <columns>Number_of_Employees_End__c</columns>
        <columns>Price__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Code__c</field>
            <operation>equals</operation>
            <value>BH</value>
        </filters>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Product - BH</label>
    </listViews>
    <listViews>
        <fullName>Product_HY</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Number_of_Employees_Start__c</columns>
        <columns>Number_of_Employees_End__c</columns>
        <columns>Price__c</columns>
        <columns>Discount__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Code__c</field>
            <operation>equals</operation>
            <value>HY</value>
        </filters>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Product - HY</label>
    </listViews>
    <listViews>
        <fullName>Product_P360</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Number_of_Employees_Start__c</columns>
        <columns>Number_of_Employees_End__c</columns>
        <columns>Price__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Parent_Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Code__c</field>
            <operation>equals</operation>
            <value>PRIM360CARE</value>
        </filters>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Product - P360</label>
    </listViews>
    <listViews>
        <fullName>Tier_1_Pricing</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Number_of_Employees_Start__c</columns>
        <columns>Number_of_Employees_End__c</columns>
        <columns>Price__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Consult_Type__c</field>
            <operation>equals</operation>
            <value>Tier 1 - Standard,Tier 1 - Included</value>
        </filters>
        <label>Pricing -  Tier 1</label>
    </listViews>
    <listViews>
        <fullName>Virtual_Care_Optimization</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Consult_Type__c</columns>
        <columns>Fee_Type__c</columns>
        <columns>Parent_Product_Code__c</columns>
        <columns>Number_of_Employees_Start__c</columns>
        <columns>Number_of_Employees_End__c</columns>
        <columns>Price__c</columns>
        <columns>Discount__c</columns>
        <columns>Initial_Utilization_Cap__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Virtual Care Optimization</value>
        </filters>
        <label>Virtual Care Optimization</label>
    </listViews>
    <nameField>
        <label>Broker Price</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Broker Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>